--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <!-- Enquire now !MOBILE ONLY! !-->
             <div id="enquire-outer-wrapper" class="container-fluid hidden-sm hidden-md hidden-lg">
                 <div id="enquire-inner-wrapper" class="col-xs-10 col-xs-offset-1">
-                    <div id="form-header" class="col-xs-12">
+                    <div id="form-header" class="col-xs-10 col-xs-offset-1">
                         <h4>Enquire now</h4>
                     </div>
 
@@ -149,7 +149,7 @@
                             <input type="phone" class="form-control" id="phone" placeholder="Phone number">
                             <textarea class="form-control" placeholder="I'm interested in apartment ..." rows="3"></textarea>
                         </div>
-                        <div id="enquire-submit" class="col-xs-12">
+                        <div id="enquire-submit" class="col-xs-10 col-xs-offset-1">
                             <button type="submit" class="btn btn-default">Submit</button>
                         </div>
                     </form>
