add rough template for overlays

--- a/index.html
+++ b/index.html
@@ -117,7 +117,29 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <img class="img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
-                            <!-- @todo - need overlay -->
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <h4>3 Bedroom</h4>
+
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            logo + text 
+                                        </div>
+                                        <div class="col-xs-6">
+                                            logo + text
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            logo + text 
+                                        </div>
+                                        <div class="col-xs-6">
+                                            logo + text 
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-xs-6">
                             <img class="img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
@@ -129,7 +151,29 @@
                         </div>
                         <div class="col-xs-6">
                             <img class="img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
-                            <!-- @todo - need overlay -->
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <h4>3 Bedroom</h4>
+
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            logo + text 
+                                        </div>
+                                        <div class="col-xs-6">
+                                            logo + text
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            logo + text 
+                                        </div>
+                                        <div class="col-xs-6">
+                                            logo + text 
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
