--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                                     <div class="row">
                                         <div class="col-xs-6">
-                                            logo + text 
+                                            logo + text
                                         </div>
                                         <div class="col-xs-6">
                                             logo + text
@@ -132,10 +132,10 @@
 
                                     <div class="row">
                                         <div class="col-xs-6">
-                                            logo + text 
+                                            logo + text
                                         </div>
                                         <div class="col-xs-6">
-                                            logo + text 
+                                            logo + text
                                         </div>
                                     </div>
                                 </div>
@@ -157,7 +157,7 @@
 
                                     <div class="row">
                                         <div class="col-xs-6">
-                                            logo + text 
+                                            logo + text
                                         </div>
                                         <div class="col-xs-6">
                                             logo + text
@@ -166,10 +166,10 @@
 
                                     <div class="row">
                                         <div class="col-xs-6">
-                                            logo + text 
+                                            logo + text
                                         </div>
                                         <div class="col-xs-6">
-                                            logo + text 
+                                            logo + text
                                         </div>
                                     </div>
                                 </div>
@@ -207,30 +207,108 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur. Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est
-                        laborum.
+                        magna aliqua.
                     </p>
                 </div>
 
                 <div id="rates-table" class="col-xs-12">
                     <div class="row">
-                        <div class="col-xs-6">one</div>
-                        <div class="col-xs-6">two</div>
+                        <div class="rates-left col-xs-6">
+                            <div class="title">
+                                Shared
+                            </div>
+                            <div class="sub-title1">
+                                Bedroom
+                            </div>
+                            <div class="sub-title2">
+                                From
+                            </div>
+
+                            <div class="price-box">
+                                $300 
+                            </div>
+                        </div>
+                        <div class="rates-right col-xs-6">
+                            <div class="title">
+                                2 Bedroom
+                            </div>
+                            <div class="sub-title1">
+                                Apartment
+                            </div>
+                            <div class="sub-title2">
+                                From
+                            </div>
+
+                            <div class="price-box">
+                                $1,100
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-xs-6">three</div>
-                        <div class="col-xs-6">four</div>
+                        <div class="rates-left col-xs-6">
+                            <div class="title">
+                                Single
+                            </div>
+                            <div class="sub-title1">
+                                Bedroom
+                            </div>
+                            <div class="sub-title2">
+                                From
+                            </div>
+
+                            <div class="price-box">
+                                $400
+                            </div>
+                        </div>
+                        <div class="rates-right col-xs-6">
+                            <div class="title">
+                                3 Bedroom
+                            </div>
+                            <div class="sub-title1">
+                                Apartment
+                            </div>
+                            <div class="sub-title2">
+                                From
+                            </div>
+
+                            <div class="price-box">
+                                $1,500
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-xs-6">five</div>
-                        <div class="col-xs-6">six</div>
+                        <div class="rates-left col-xs-6">
+                            <div class="title">
+                               Double
+                            </div>
+                            <div class="sub-title1">
+                                Bedroom
+                            </div>
+                            <div class="sub-title2">
+                                From
+                            </div>
+
+                            <div class="price-box">
+                                $400
+                            </div>
+                        </div>
+                        <div class="rates-right col-xs-6">
+                            <div class="title">
+                                3 Bedroom
+                            </div>
+                            <div class="sub-title1">
+                                Apartment
+                            </div>
+                            <div class="sub-title2">
+                                From
+                            </div>
+
+                            <div class="price-box">
+                                $1,500
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
