add basic facilities styling

--- a/index.html
+++ b/index.html
@@ -323,59 +323,103 @@
 
                 <div id="major-icons" class="col-xs-12">
                     <div class="row">
-                        <div class="col-xs-6"><p>one</p></div>
-                        <div class="col-xs-6">two</div>
+                        <div class="col-xs-6">
+                            <h5>Free Wifi</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>Free Wifi</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">three</div>
-                        <div class="col-xs-6">four</div>
+                        <div class="col-xs-6">
+                            <h5>Full Furnised</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>Full Furnised</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">five</div>
-                        <div class="col-xs-6">six</div>
+                        <div class="col-xs-6">
+                            <h5>Central Heating</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>Central Heating</h5>
+                        </div>
                     </div>
                 </div>
 
                 <div id="minor-icons" class="col-xs-10 col-xs-offset-1">
                     <div class="row">
-                        <div class="col-xs-6">one</div>
-                        <div class="col-xs-6">two</div>
+                        <div class="col-xs-6">
+                            <h5>Fridge Freezer</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>24 Hour Access</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">three</div>
-                        <div class="col-xs-6">four</div>
+                        <div class="col-xs-6">
+                            <h5>Walking Distance</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>Parking</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">five</div>
-                        <div class="col-xs-6">six</div>
+                        <div class="col-xs-6">
+                            <h5>Smoking Area</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>Bike Rack</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">seven</div>
-                        <div class="col-xs-6">eight</div>
+                        <div class="col-xs-6">
+                            <h5>Washing Machine</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>On Bus Line</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">nine</div>
-                        <div class="col-xs-6">ten</div>
+                        <div class="col-xs-6">
+                            <h5>Lifts</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>Fire Safety</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">eleven</div>
-                        <div class="col-xs-6">twelve</div>
+                        <div class="col-xs-6">
+                            <h5>Intercom</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>Outdoor Seating Area</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">thirteen</div>
-                        <div class="col-xs-6">fourteen</div>
+                        <div class="col-xs-6">
+                            <h5>Study Area</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>Weekly Rubbish Collections</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">fiveteen</div>
-                        <div class="col-xs-6">sixteen</div>
+                        <div class="col-xs-6">
+                            <h5>Mailboxes</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>Secure / Monitored Building</h5>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">seventeen</div>
-                        <div class="col-xs-6">eighteen</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-6">nineteen</div>
-                        <div class="col-xs-6">twenty</div>
+                        <div class="col-xs-6">
+                            <h5>Microwave</h5>
+                        </div>
+                        <div class="col-xs-6">
+                            <h5>BBQ Area</h5>
+                        </div>
                     </div>
                 </div>
             </div>
