add styles for 'location' section

--- a/index.html
+++ b/index.html
@@ -432,26 +432,27 @@
                     </div>
 
                     <div id="location-map" class="col-xs-12">
-                        <p>Map</p>
+                        <img class="img-reponsive" 
+                             src="http://dummyimage.com/340x140/000/fff&text=dummy-map" 
+                             alt="@todo">
                     </div>
 
-                    <div class="col-xs-6">
+                    <div id="location-left-text" class="col-xs-6">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing
                             elit, sed do eiusmod tempor incididunt ut labore et dolore
-                            magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                            consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat non proident,
-                            sunt in culpa qui officia deserunt mollit anim id est
-                            laborum.
+                            magna aliqua.
                         </p>
                     </div>
                     <div class="col-xs-6">
                         <div id="walking-times">
-                            <h5>Walking times</h5>
-                            <p>Walking icons</p>
+                            <h4>Walking times</h4>
+                        </div>
+                        <div id="walking-icons">
+                            <h5>Cork University Hosptial</h5>
+                            <h5>City Centre</h5>
+                            <h5>Cork Institute of Technology</h5>
+                            <h5>Cork University College</h5>
                         </div>
                     </div>
                 </div>
