add style for contact form

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             </div>
 
                             <div class="price-box">
-                                $300 
+                                $300
                             </div>
                         </div>
                         <div class="rates-right col-xs-6">
@@ -432,8 +432,8 @@
                     </div>
 
                     <div id="location-map" class="col-xs-12">
-                        <img class="img-reponsive" 
-                             src="http://dummyimage.com/340x140/000/fff&text=dummy-map" 
+                        <img class="img-reponsive"
+                             src="http://dummyimage.com/340x140/000/fff&text=dummy-map"
                              alt="@todo">
                     </div>
 
@@ -465,7 +465,27 @@
                 </div>
 
                 <div id="contact-form">
-                    <p>form</p>
+                    <form>
+                        <div class="form-group">
+                            <label for="contact-name">Name</label>
+                            <input type="name" class="form-control" id="contact-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="contact-email">Email</label>
+                            <input type="email" class="form-control" id="contact-email">
+                        </div>
+                        <div class="form-group">
+                            <label for="contact-phone">Phone Number</label>
+                            <input type="phone" class="form-control" id="contact-phone">
+                        </div>
+                        <div class="form-group">
+                            <label for="contact-text">Message</label>
+                            <textarea class="form-control" rows="3"> </textarea>
+                        </div>
+                        <div id="contact-submit" class="col-xs-10 col-xs-offset-1">
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
