--- a/index.html
+++ b/index.html
@@ -28,7 +28,26 @@
                 </div>
 
                 <div id="menu" class="col-xs-10 col-xs-offset-1">
-                    <p>Menu</p>
+                    <nav class="navbar navbar-default">
+                        <div class="container-fluid">
+                            <!-- Brand and toggle get grouped for better mobile display -->
+                            <div class="navbar-header">
+                                <a class="navbar-brand navbar-toggle collapsed"
+                                   data-toggle="collapse"
+                                   data-target="#bs-example-navbar-collapse-1"
+                                   href="#">Menu</a>
+                            </div>
+
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+                                <li><a id="first-menu-item" href="#">Link</a></li>
+                                <li><a href="#">Link</a></li>
+                                <li><a href="#">Link</a></li>
+                            </ul>
+                            </div>
+                        </div>
+                    </nav>
                 </div>
             </div>
 
