--- a/index.html
+++ b/index.html
@@ -512,10 +512,14 @@
     <script src="./assets/javascripts/jquery.min.js"></script>
     <script src="./assets/javascripts/bootstrap.min.js"></script>
 
-    <!-- typekit fonts -->
+    <!-- Typekit fonts -->
     <script src="//use.typekit.net/sho8rjy.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
+    <!-- Jquery LazyLoad -->
+    <script src="jquery.lazyload.js" type="text/javascript"></script>
+
+    <!-- Custom Javascript -->
     <script src="./assets/javascripts/app.js"></script>
     </body>
 </html>
