--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img class="img-reponsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                <img class="lazy img-reponsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                             </div>
 
                             <div class="item">
-                                <img class="img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                             </div>
 
                             <div class="item">
-                                <img class="img-reponsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                <img class="lazy img-reponsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                             </div>
                         </div>
 
@@ -114,7 +114,7 @@
             <div id="rooms-wrapper" class="container-fluid">
                 <div id="room-image" class="col-xs-12">
                     <div class="col-xs-12">
-                        <img class="img-reponsive" src="http://dummyimage.com/360x180/000/fff&text=dummy-image" alt="@todo">
+                        <img class="lazy img-reponsive" src="http://dummyimage.com/360x180/000/fff&text=dummy-image" alt="@todo">
                     </div>
                     <div id="room-image-text" class="col-xs-10 col-xs-offset-1">
                         <p>
@@ -135,7 +135,7 @@
                 <div id="rooms-4-way-img">
                     <div class="row">
                         <div class="col-xs-6">
-                            <img class="img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
                             <div class="overlay">
                                 <div class="overlay-content">
                                     <h4>3 Bedroom</h4>
@@ -161,15 +161,15 @@
                             </div>
                         </div>
                         <div class="col-xs-6">
-                            <img class="img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
-                            <img class="img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
                         </div>
                         <div class="col-xs-6">
-                            <img class="img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
                             <div class="overlay">
                                 <div class="overlay-content">
                                     <h4>3 Bedroom</h4>
@@ -451,7 +451,7 @@
                     </div>
 
                     <div id="location-map" class="col-xs-12">
-                        <img class="img-reponsive"
+                        <img class="lazy img-reponsive"
                              src="http://dummyimage.com/340x140/000/fff&text=dummy-map"
                              alt="@todo">
                     </div>
