fix path typo for lazyload

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
     <script>try{Typekit.load();}catch(e){}</script>
 
     <!-- Jquery LazyLoad -->
-    <script src="jquery.lazyload.js" type="text/javascript"></script>
+    <script src="./assets/javascripts/jquery.lazyload.min.js" type="text/javascript"></script>
 
     <!-- Custom Javascript -->
     <script src="./assets/javascripts/app.js"></script>
