--- a/index.html
+++ b/index.html
@@ -30,17 +30,15 @@
                 <div id="menu" class="col-xs-10 col-xs-offset-1">
                     <nav class="navbar navbar-default">
                         <div class="container-fluid">
-                            <!-- Brand and toggle get grouped for better mobile display -->
                             <div class="navbar-header">
                                 <a class="navbar-brand navbar-toggle collapsed"
                                    data-toggle="collapse"
                                    data-target="#bs-example-navbar-collapse-1"
                                    href="#">Menu</a>
                             </div>
-
-                            <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
+                                <!-- Insert new menu items here -->
                                 <li><a id="first-menu-item" href="#">Link</a></li>
                                 <li><a href="#">Link</a></li>
                                 <li><a href="#">Link</a></li>
@@ -92,9 +90,10 @@
                                 <img class="lazy img-reponsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                             </div>
                         </div>
-
-                        <!-- Slide navigation -->
-                        <!-- @todo -->
+                        <div id="nav-control" class="col-xs-6 col-xs-offset-3">
+                            <a class="custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
+                            <a class="custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a>
+                        </div>
                     </div>
                 </div>
 
