add better dummy image colors

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img class="lazy img-reponsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                <img class="lazy img-reponsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
                             </div>
 
                             <div class="item">
@@ -134,7 +134,7 @@
                 <div id="rooms-4-way-img">
                     <div class="row">
                         <div class="col-xs-6">
-                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/824482/161e8a&text=dummy-image" alt="@todo">
                             <div class="overlay">
                                 <div class="overlay-content">
                                     <h4>3 Bedroom</h4>
@@ -160,12 +160,12 @@
                             </div>
                         </div>
                         <div class="col-xs-6">
-                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/3995bf/161e8a&text=dummy-image" alt="@todo">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
-                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/30cc00/161e8a&text=dummy-image" alt="@todo">
                         </div>
                         <div class="col-xs-6">
                             <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
