--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <div class="container-fluid">
 
             <!-- header -->
-            <div id="menu-wrapper" class="container-fluid">
+
+            <!-- DESKTOP -->
+            <!-- @todo -->
+
+            <!-- MOBILE -->
+            <div id="menu-wrapper" class="container-fluid hidden-sm hidden-md hidden-lg">
                 <div id="menu-logo" class="col-xs-8 col-xs-offset-2">
                     <div class="col-xs-8 col-xs-offset-2">
                         <h4>Logo</h4>
